fixed: media query for AnimalsAnimal component, it will not apply hover effect on mobile devices

--- a/src/components/AnimalsAnimal/AnimalsAnimal.module.css
+++ b/src/components/AnimalsAnimal/AnimalsAnimal.module.css
@@ -11,7 +11,7 @@
 }
 
 @media (hover: none) {
-  .animals__animal:hover {
+  .animal:hover {
     opacity: 1;
   }
 }
